# oaxaca-blinder-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  README.md.~1~  WHITE_PAPER.md  cliff.toml  dummy_dfl.csv  fix_akm_collect.py  fix_errors.py  oaxaca-blinder-decomposition-research.md  patch_access.sh  patch_auth.sh  patch_auth2.sh  patch_auth_3.sh  patch_auth_4.py  patch_cors.py  patch_fix.py  patch_limits.py  patch_limits_2.py  patch_protocol.py  patch_protocol_2.py  patch_rate_limit.py  patch_rwlock.py  patch_spawn.py  patch_verify.py  probit_bench.rs  test_cast.rs  test_gov.rs
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  rust.yml
docs/: API.md  ARCHITECTURE.md  AUDIT_REPORT.md  CONTRIBUTING.md  DEVELOPMENT.md  JULES_TASKS.md  README.md  RIF-regression-decomposition-research.md
docs/superpowers/plans/: 2026-03-14-lib-rs-refactor.md
docs/superpowers/specs/: 2026-03-14-lib-rs-refactor-design.md
engine/: Cargo.toml
engine/crates/crossterm/: Cargo.toml
engine/crates/crossterm/src/: lib.rs
engine/src/: access.rs  analysis.rs  check_features.rs  defensibility.rs  lib.rs  types.rs  types_new_fragment.rs  verification_test.rs
meridian-mcp/: Cargo.toml  Dockerfile  Dockerfile.~1~  docker-compose.yml  docker-compose.yml.~1~
meridian-mcp/src/: main.rs  main.rs.~1~
oaxaca_blinder/: AGENTS.md  Cargo.toml  README.md  benchmark_oaxaca.R  benchmark_oaxaca_results.txt  pyproject.toml
oaxaca_blinder/benches/: bench.rs  distance_bench.rs  logit_bench.rs
oaxaca_blinder/examples/: benchmark_python.py  generate_benchmark_data.rs
oaxaca_blinder/research/: Quantile-regression-decomposition-research.md  Variance-Inflation-Factor .md
oaxaca_blinder/src/: akm.rs  builder.rs  decomposition.rs  dfl.rs  display.rs  error.rs  estimation.rs  formula.rs  heckman.rs  inference.rs  jmp.rs  lib.rs  main.rs  python.rs  quantile_decomposition.rs  types.rs
oaxaca_blinder/src/matching/: distance.rs  engine.rs  logistic.rs  mod.rs
oaxaca_blinder/src/math/: diagnostics.rs  kde.rs  logit.rs  mod.rs  normalization.rs  ols.rs  probit.rs  quantile_regression.rs  rif.rs
oaxaca_blinder/templates/: report.html
oaxaca_blinder/tests/: cli_test.rs  export_test.rs  features_test.rs  formula_test.rs  heckman_test.rs  integration_test.rs  matching_test.rs  null_handling_test.rs  optimize_budget_test.rs  rif_test.rs  test_akm.rs  weights_test.rs
oaxaca_blinder/tests/data/: wage.csv
openpay_optimization/: Cargo.toml
openpay_optimization/src/: engine.rs  lib.rs  pay_equity.rs
openpay_optimization/tests/: integration_test.rs
optimization_engine/: Cargo.toml
optimization_engine/src/: engine.rs  lib.rs  merit_matrix.rs  pay_equity.rs  wage_scale.rs
optimization_engine/tests/: integration_test.rs
tests/: integration_test.rs
verification/: verify_heckman.py  verify_interpret.py  verify_plot.py
