[package]
name = "pay-equity-engine"
version = "0.1.0"
edition = "2021"
authors = ["OpenPay Team <contact@openpay.ai>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oaxaca_blinder = { version = "0.2.2" }
# openpay_optimization = { version = "0.1.0", default-features = false, features = ["pay_equity"] }
polars = { version = "0.44", default-features = false, features = ["lazy", "csv", "serde", "diff", "dtype-categorical", "dtype-struct", "strings", "polars-ops", "polars-io"] }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
anyhow = "1.0"
getrandom = { version = "0.3", optional = true }
hashbrown = { version = "0.14", features = ["raw"] }
nalgebra = "0.32"
console_error_panic_hook = { version = "0.1", optional = true }
statrs = "0.18.0"
sha2 = "0.10"
gloo-net = { version = "0.6", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
optional = true

[features]
default = []
wasm = [
    "wasm-bindgen",
    "serde-wasm-bindgen",
    "console_error_panic_hook",
    "gloo-net",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "getrandom/wasm_js"
]

[patch.crates-io]
crossterm = { path = "./crates/crossterm" }
# openpay_optimization = { path = "./vendor/openpay_optimization" }
