[package]
name = "meridian-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pay-equity-engine = { path = "../engine" }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
governor = "0.6"
