[package]
name = "oaxaca_blinder"
version = "0.2.1"
authors = ["dot-comma-hyphen <poche450@gmail.com>"]
edition = "2021"

description = "A Rust library for performing Oaxaca-Blinder decomposition on Polars DataFrames, with support for categorical variables and bootstrapped standard errors. "
license = "MIT"
repository = "https://github.com/dot-comma-hyphen/oaxaca-blinder-rs"
readme = "README.md"
keywords = ["statistics", "economics", "oaxaca-blinder"]
categories = ["science"]

[lib]
name = "oaxaca_blinder"
crate-type = ["rlib", "cdylib"]

[dependencies]
getset = "0.1.2"
nalgebra = "0.32.3"
polars = { version = "0.38.3", features = ["lazy", "csv", "ndarray", "random"] }
comfy-table = "7.0.1"
rayon = "1.11.0"
ndarray = "0.15.6"
rand = "0.8.5"
clarabel = "0.11.1"
clap = { version = "4.5.10", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18.0"
kdtree = "0.7"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[[bin]]
name = "oaxaca-cli"
path = "src/main.rs"
