[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oaxaca-blinder"
version = "0.1.0"
description = "Oaxaca-Blinder decomposition library for Python"
authors = [{name = "dot-comma-hyphen", email = "poche450@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["python"]
module-name = "oaxaca_blinder"
