[package]
name = "optimization_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
good_lp = { version = "1.8", features = ["highs"], default-features = false }
polars = { version = "0.44", features = ["lazy", "ndarray", "rows", "is_in"] }
anyhow = "1.0"
thiserror = "2.0"
nalgebra = "0.32"
oaxaca_blinder = { path = "../oaxaca_blinder" }
ndarray = "0.15"

[dev-dependencies]
